@@ -8,7 +8,6 @@ v1.6
 	dynamic playlist?
 	various artists in library views?
 	stop after this track?
-	improve artwork files when varying case (e.g. Ani DiFranco)
 	
 Future:
 	lyrics -> ability to save changes
